test/compilable/json2.d
/*
PERMUTE_ARGS:
REQUIRED_ARGS: -d -o- -Xf=${RESULTS_DIR}/compilable/json2.out -Xi=compilerInfo -Xi=buildInfo -Xi=modules -Xi=semantics
POST_SCRIPT: compilable/extra-files/json-postscript.sh
TEST_OUTPUT:
---
---
*/
import json;
